--- a/eMSP-platform/helm-k8s/Chart.yml
+++ b/eMSP-platform/helm-k8s/Chart.yml
@@ -8,5 +8,5 @@ keywords:
 home: https://github.com/open-electrons/eMSP-platform
 maintainers:
   - name: Joesan
-    email: https://github.com/joesan
-    url: https://www.bigelectrons.com
+    email: https://github.com/open-electrons
+    url: https://open-electrons.github.io/home/
