--- a/eMSP-platform/helm-k8s/templates/base/kustomization.yml
+++ b/eMSP-platform/helm-k8s/templates/base/kustomization.yml
@@ -8,11 +8,11 @@ resources:
   - monitoring/emsp-platform-monitoring-namespace.yaml
 
   # 1. Set up monitoring services (prometheus)
-  #- monitoring/prometheus/prometheus-roles.yaml
-  - monitoring/prometheus/config-map.yaml
-  - monitoring/prometheus/prometheus-roles.yaml
-  - monitoring/prometheus/prometheus-deployment.yaml
-  - monitoring/prometheus/prometheus-service.yaml
+  #- monitoring/prometheus/prometheus-roles.yml
+  - monitoring/prometheus/prometheus-config.yml
+  - monitoring/prometheus/prometheus-roles.yml
+  - monitoring/prometheus/prometheus-deployment.yml
+  - monitoring/prometheus/prometheus-service.yml
 
   # 2. Set up monitoring services (grafana)
   - monitoring/grafana/grafana-deployment.yaml
