--- a/monitoring/helm-k8s/templates/base/kustomization.yml
+++ b/monitoring/helm-k8s/templates/base/kustomization.yml
@@ -4,16 +4,16 @@ metadata:
   name: open-electrons-monitoring-kustomization
 resources:
   # 0. Get the namespaces first
-  - monitoring/open-electrons-monitoring-namespace.yml
+  - open-electrons-monitoring-namespace.yml
 
   # 1. Set up monitoring services (prometheus)
   #- monitoring/prometheus/prometheus-roles.yml
-  - monitoring/prometheus/prometheus-config.yml
-  - monitoring/prometheus/prometheus-roles.yml
-  - monitoring/prometheus/prometheus-deployment.yml
-  - monitoring/prometheus/prometheus-service.yml
+  - prometheus/prometheus-config.yml
+  - prometheus/prometheus-roles.yml
+  - prometheus/prometheus-deployment.yml
+  - prometheus/prometheus-service.yml
 
   # 2. Set up monitoring services (grafana)
-  - monitoring/grafana/grafana-datasource-config.yml
-  - monitoring/grafana/grafana-deployment.yml
-  - monitoring/grafana/grafana-service.yml
+  - grafana/grafana-datasource-config.yml
+  - grafana/grafana-deployment.yml
+  - grafana/grafana-service.yml
