--- a/monitoring/helm-k8s/templates/base/kustomization.yml
+++ b/monitoring/helm-k8s/templates/base/kustomization.yml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: open-electrons-monitoring-kustomization
+generators:
+  - chartInflator.yml
 resources:
   # 0. Get the namespaces first
   - open-electrons-monitoring-namespace.yml
