--- a/open-electrons-monitoring/templates/base/chartInflator.yml
+++ b/open-electrons-monitoring/templates/base/chartInflator.yml
@@ -1,11 +1,14 @@
 apiVersion: builtin
+#apiVersion: kustomize.config.k8s.io/v1
 kind: HelmChartInflationGenerator
+metadata:
+  name: open-electrons-helm-inflator
 # The name of the chart to use and its location
 chartName: open-electrons-monitoring
-chartHome: ../../../helm-k8s/
+chartHome: /Projects/Private/scala-projects/open-electrons/open-electrons-deployments/k3s-monitoring
 # The name of the release
 releaseName: open-electrons-monitoring-chart
 # Path to a values.yaml
-values: ../../values.yaml
+values: /Projects/Private/scala-projects/open-electrons/open-electrons-deployments/k3s-monitoring/values.yaml
 # Namespace to deploy to
 releaseNamespace: open-electrons-monitoring-ns
