--- a/open-electrons-monitoring/templates/base/grafana/grafana-deployment.yml
+++ b/open-electrons-monitoring/templates/base/grafana/grafana-deployment.yml
@@ -4,11 +4,11 @@ metadata:
   name: grafana-{{ .Values.app.name }}
   namespace: open-electrons-monitoring
   labels:
-    app.kubernetes.io/name: {{ .Values.grafanaService.name }}
+    #app.kubernetes.io/name: {{ .Values.grafanaService.name }}
     app.kubernetes.io/component: {{ .Values.grafanaService.component }}
-    app.kubernetes.io/part-of: {{ .Values.grafanaService.name }}
+    #app.kubernetes.io/part-of: {{ .Values.grafanaService.name }}
     app.kubernetes.io/managed-by: helm
-    app.kubernetes.io/instance: {{ .Values.grafanaService.name }}
+    #app.kubernetes.io/instance: {{ .Values.grafanaService.name }}
     app.kubernetes.io/version: {{ .Values.app.version }} # TODO: Better use the Grafana version
 spec:
   replicas: 1
