--- a/open-electrons-monitoring/templates/open-electrons-monitoring-namespace.yml
+++ b/open-electrons-monitoring/templates/open-electrons-monitoring-namespace.yml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: open-electrons-monitoring
-  #labels:
-   # name: {{ .Values.app.namespace }}
+  labels:
+    name: {{ .Values.app.namespace }}
