--- a/open-electrons-monitoring/templates/prometheus/prometheus-roles.yml
+++ b/open-electrons-monitoring/templates/prometheus/prometheus-roles.yml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: open-electrons-prometheus
+  name: {{ .Values.prometheusService.name }}
 rules:
 - apiGroups: [""]
   resources:
@@ -23,17 +23,17 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: default
-  namespace: open-electrons-monitoring
+  namespace: {{ .Values.app.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: open-electrons-prometheus
+  name: {{ .Values.prometheusService.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: open-electrons-prometheus
+  name: {{ .Values.prometheusService.name }}
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: open-electrons-monitoring
+  namespace: {{ .Values.app.namespace }}
