--- a/open-electrons-monitoring/templates/grafana/grafana-service.yml
+++ b/open-electrons-monitoring/templates/grafana/grafana-service.yml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: Service
+kind: Service # This is a test
 metadata:
   name: {{ .Values.grafanaService.name }}
   namespace: {{ .Values.app.namespace }}
